Added new files

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -11,7 +11,6 @@
 
     <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
     <script>
-        // Initialize Firebase
         var config = {
             apiKey: "AIzaSyASJC06fYm-JYUA-cpTN9K3BRqODY51MrY",
             authDomain: "natalydid-ba904.firebaseapp.com",
@@ -34,35 +33,9 @@
 
                 <p id="errors"></p>
 
-                <!--<div class="login">
-                    <form action="#" name="login">
-                        <fieldset>
-                            <legend>Войти</legend>
-                            <input type="email" placeholder="email" required>
-                            <input type="password" placeholder="password" required>
-                            <button>Войти</button>
-                        </fieldset>
-                    </form>
-                </div>
-
-                <div class="registration">
-
-                    <form action="#" name="register">
-                        <fieldset>
-                            <legend>Зарегистрироваться</legend>
-                            <input type="text" placeholder="Name" required>
-                            <input type="email" placeholder="email" required>
-                            <input type="password" required placeholder="password">
-                            <input type="password" placeholder="repeat password" required>
-                            <button>Регистрация</button>
-                        </fieldset>
-                    </form>
-
-                </div>-->
-
                 <div class="col-xs-10 text-right">
-                    <div class="welcome  ">
-                        <span class="user-name">Welcome</span>
+                    <div class="welcome">
+                        <span class="user-name"></span>
                         <br>
                         <button id="btnLogout" type="button" class="btn btn-autor">Выйти</button>
 
